Fix abstract submission ID color contrast
- Add #abstract-review-page wrapper to abstract template
- Override .submission-id color with --text-secondary-color

--- a/indico/web/client/styles/modules/_reviewing.scss
+++ b/indico/web/client/styles/modules/_reviewing.scss
@@ -64,6 +64,10 @@
 
   .submission-id {
     color: $gray;
+
+    #abstract-review-page & {
+      color: var(--text-secondary-color);
+    }
   }
 
   .submission-code {
